LOs CS1 and restructure

--- a/materials/cs1_practical_one-sample-t-test.qmd
+++ b/materials/cs1_practical_one-sample-t-test.qmd
@@ -16,6 +16,25 @@ import shutup;shutup.please()
 exec(open('setup_files/setup.py').read())
 ```
 
+::: callout-tip
+## Learning outcomes
+
+**Questions**
+
+- When do I perform a one-sample test?
+- What are the assumptions?
+- How do I interpret and present the results of the test?
+
+**Objectives**
+
+- Set out your hypothesis for single sample continuous data
+- Be able to summarise and visualise the data
+- Understand and assess the underlying assumptions of the test
+- Perform a one-sample t-test
+- Be able to interpret and report the results
+
+:::
+
 ## Libraries and functions
 
 ::: {.callout-note collapse="true"}
